src/controller/syntax/JLPSSyntaxParser.java
// $ANTLR 3.4 C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g 2013-08-13 15:48:40

package controller.syntax;

import java.util.HashMap;

import model.Action;
import model.And;
import model.Clause;
import model.Constant;
import model.CycleHandler;
import model.Database;
import model.DPostDeclaration;
import model.DSet;
import model.Equal;
import model.FactSet;
import model.GoalSet;
import model.GoalsList;
import model.Initiator;
import model.Not;
import model.ReactiveRule;
import model.ReactiveRuleSet;
import model.Rule;
import model.RuleSet;
import model.SimpleSentence;
import model.Terminator;
import model.Unifiable;
import model.Variable;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/**
* @author Alexandre Camus
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class JLPSSyntaxParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "COMMENT_LINE", "CONSTANT", "VARIABLE", "WS", "'!'", "'&'", "'('", "')'", "','", "'->'", "'.'", "':'", "':-'", "'='", "'=='", "'DSet'", "'Database'", "'Domain Theory'", "'DomainTheory'", "'Dset'", "'Events'", "'Facts'", "'Goals'", "'Lext'", "'Lint'", "'Postconditions'", "'Preconditions'", "'ReactiveRules'", "'Rules'", "'['", "']'", "'conditions'", "'conflicts'", "'dSet'", "'database'", "'domain theory'", "'domainTheory'", "'dset'", "'events'", "'facts'", "'goals'", "'initiates'", "'lext'", "'lint'", "'reactiveRules'", "'reactiverules'", "'rules'", "'terminates'", "'true'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int COMMENT=4;
    public static final int COMMENT_LINE=5;
    public static final int CONSTANT=6;
    public static final int VARIABLE=7;
    public static final int WS=8;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public JLPSSyntaxParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public JLPSSyntaxParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return JLPSSyntaxParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g"; }


    HashMap<String, Variable> variables = new HashMap<String, Variable>();



    // $ANTLR start "unifiable"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:52:1: unifiable returns [Unifiable unifiable] : ( constant | variable | simpleSentence );
    public final Unifiable unifiable() throws RecognitionException {
        Unifiable unifiable = null;


        Constant constant1 =null;

        Variable variable2 =null;

        SimpleSentence simpleSentence3 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:53:3: ( constant | variable | simpleSentence )
            int alt1=3;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==CONSTANT) ) {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==10||(LA1_1 >= 12 && LA1_1 <= 15)) ) {
                    alt1=1;
                }
                else if ( (LA1_1==11) ) {
                    alt1=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA1_0==VARIABLE) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:53:7: constant
                    {
                    pushFollow(FOLLOW_constant_in_unifiable57);
                    constant1=constant();

                    state._fsp--;


                    unifiable = constant1;

                    }
                    break;
                case 2 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:54:7: variable
                    {
                    pushFollow(FOLLOW_variable_in_unifiable67);
                    variable2=variable();

                    state._fsp--;


                    unifiable = variable2;

                    }
                    break;
                case 3 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:55:7: simpleSentence
                    {
                    pushFollow(FOLLOW_simpleSentence_in_unifiable77);
                    simpleSentence3=simpleSentence();

                    state._fsp--;


                    unifiable = simpleSentence3;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return unifiable;
    }
    // $ANTLR end "unifiable"



    // $ANTLR start "constant"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:58:1: constant returns [Constant constant] : CONSTANT ;
    public final Constant constant() throws RecognitionException {
        Constant constant = null;


        Token CONSTANT4=null;

        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:59:3: ( CONSTANT )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:59:7: CONSTANT
            {
            CONSTANT4=(Token)match(input,CONSTANT,FOLLOW_CONSTANT_in_constant100); 

            constant = new Constant((CONSTANT4!=null?CONSTANT4.getText():null));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return constant;
    }
    // $ANTLR end "constant"



    // $ANTLR start "variable"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:62:1: variable returns [Variable variable] : VARIABLE ;
    public final Variable variable() throws RecognitionException {
        Variable variable = null;


        Token VARIABLE5=null;

        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:63:3: ( VARIABLE )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:63:7: VARIABLE
            {
            VARIABLE5=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_variable121); 

            if (!this.variables.containsKey((VARIABLE5!=null?VARIABLE5.getText():null))) {
                      variable = new Variable((VARIABLE5!=null?VARIABLE5.getText():null));
                      this.variables.put((VARIABLE5!=null?VARIABLE5.getText():null), variable);
                  } else {
                      variable = this.variables.get((VARIABLE5!=null?VARIABLE5.getText():null));
                  }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return variable;
    }
    // $ANTLR end "variable"



    // $ANTLR start "parameters"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:72:1: parameters returns [ArrayList<Unifiable> parameters] :par1= unifiable ( ',' par2= unifiable )* ;
    public final ArrayList<Unifiable> parameters() throws RecognitionException {
        ArrayList<Unifiable> parameters = null;


        Unifiable par1 =null;

        Unifiable par2 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:73:3: (par1= unifiable ( ',' par2= unifiable )* )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:73:7: par1= unifiable ( ',' par2= unifiable )*
            {
            parameters = new ArrayList<Unifiable>();

            pushFollow(FOLLOW_unifiable_in_parameters162);
            par1=unifiable();

            state._fsp--;


            parameters.add(par1);

            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:75:7: ( ',' par2= unifiable )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==13) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:75:8: ',' par2= unifiable
            	    {
            	    match(input,13,FOLLOW_13_in_parameters173); 

            	    pushFollow(FOLLOW_unifiable_in_parameters179);
            	    par2=unifiable();

            	    state._fsp--;


            	    parameters.add(par2);

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return parameters;
    }
    // $ANTLR end "parameters"



    // $ANTLR start "simpleSentence"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:78:1: simpleSentence returns [SimpleSentence simpleSentence] : constant '(' ( parameters )? ')' ;
    public final SimpleSentence simpleSentence() throws RecognitionException {
        SimpleSentence simpleSentence = null;


        Constant constant6 =null;

        ArrayList<Unifiable> parameters7 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:79:3: ( constant '(' ( parameters )? ')' )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:79:7: constant '(' ( parameters )? ')'
            {
            Constant name; Unifiable[] parameters = new Unifiable[0];

            pushFollow(FOLLOW_constant_in_simpleSentence213);
            constant6=constant();

            state._fsp--;


            name = constant6;

            match(input,11,FOLLOW_11_in_simpleSentence223); 

            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:82:9: ( parameters )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0 >= CONSTANT && LA3_0 <= VARIABLE)) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:82:10: parameters
                    {
                    pushFollow(FOLLOW_parameters_in_simpleSentence234);
                    parameters7=parameters();

                    state._fsp--;


                    parameters = parameters7.toArray(parameters);

                    }
                    break;

            }


            match(input,12,FOLLOW_12_in_simpleSentence246); 

            simpleSentence = new SimpleSentence(name, parameters);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return simpleSentence;
    }
    // $ANTLR end "simpleSentence"



    // $ANTLR start "initiator"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:92:1: initiator returns [Initiator initiator] : 'initiates' '(' event= simpleSentence ',' fact= simpleSentence ')' ;
    public final Initiator initiator() throws RecognitionException {
        Initiator initiator = null;


        SimpleSentence event =null;

        SimpleSentence fact =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:93:3: ( 'initiates' '(' event= simpleSentence ',' fact= simpleSentence ')' )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:93:7: 'initiates' '(' event= simpleSentence ',' fact= simpleSentence ')'
            {
            match(input,46,FOLLOW_46_in_initiator275); 

            match(input,11,FOLLOW_11_in_initiator283); 

            pushFollow(FOLLOW_simpleSentence_in_initiator297);
            event=simpleSentence();

            state._fsp--;


            match(input,13,FOLLOW_13_in_initiator299); 

            pushFollow(FOLLOW_simpleSentence_in_initiator305);
            fact=simpleSentence();

            state._fsp--;


            initiator = new Initiator(event, fact);

            match(input,12,FOLLOW_12_in_initiator323); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return initiator;
    }
    // $ANTLR end "initiator"



    // $ANTLR start "terminator"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:100:1: terminator returns [Terminator terminator] : 'terminates' '(' event= simpleSentence ',' fact= simpleSentence ')' ;
    public final Terminator terminator() throws RecognitionException {
        Terminator terminator = null;


        SimpleSentence event =null;

        SimpleSentence fact =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:101:3: ( 'terminates' '(' event= simpleSentence ',' fact= simpleSentence ')' )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:101:7: 'terminates' '(' event= simpleSentence ',' fact= simpleSentence ')'
            {
            match(input,52,FOLLOW_52_in_terminator344); 

            match(input,11,FOLLOW_11_in_terminator352); 

            pushFollow(FOLLOW_simpleSentence_in_terminator366);
            event=simpleSentence();

            state._fsp--;


            match(input,13,FOLLOW_13_in_terminator368); 

            pushFollow(FOLLOW_simpleSentence_in_terminator374);
            fact=simpleSentence();

            state._fsp--;


            terminator = new Terminator(event, fact);

            match(input,12,FOLLOW_12_in_terminator392); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return terminator;
    }
    // $ANTLR end "terminator"



    // $ANTLR start "equal"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:113:1: equal returns [Equal equal] : op1= variable '==' op2= unifiable ;
    public final Equal equal() throws RecognitionException {
        Equal equal = null;


        Variable op1 =null;

        Unifiable op2 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:114:3: (op1= variable '==' op2= unifiable )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:114:7: op1= variable '==' op2= unifiable
            {
            pushFollow(FOLLOW_variable_in_equal417);
            op1=variable();

            state._fsp--;


            match(input,19,FOLLOW_19_in_equal419); 

            pushFollow(FOLLOW_unifiable_in_equal425);
            op2=unifiable();

            state._fsp--;


            equal = new Equal(op1, op2);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return equal;
    }
    // $ANTLR end "equal"



    // $ANTLR start "term"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:118:1: term returns [Clause clause] : ( simpleSentence | equal | '(' and ')' );
    public final Clause term() throws RecognitionException {
        Clause clause = null;


        SimpleSentence simpleSentence8 =null;

        Equal equal9 =null;

        Clause and10 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:119:3: ( simpleSentence | equal | '(' and ')' )
            int alt4=3;
            switch ( input.LA(1) ) {
            case CONSTANT:
                {
                alt4=1;
                }
                break;
            case VARIABLE:
                {
                alt4=2;
                }
                break;
            case 11:
                {
                alt4=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:119:7: simpleSentence
                    {
                    pushFollow(FOLLOW_simpleSentence_in_term454);
                    simpleSentence8=simpleSentence();

                    state._fsp--;


                    clause = simpleSentence8;

                    }
                    break;
                case 2 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:120:7: equal
                    {
                    pushFollow(FOLLOW_equal_in_term464);
                    equal9=equal();

                    state._fsp--;


                    clause = equal9;

                    }
                    break;
                case 3 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:121:7: '(' and ')'
                    {
                    match(input,11,FOLLOW_11_in_term474); 

                    pushFollow(FOLLOW_and_in_term476);
                    and10=and();

                    state._fsp--;


                    match(input,12,FOLLOW_12_in_term478); 

                    clause = and10;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return clause;
    }
    // $ANTLR end "term"



    // $ANTLR start "negation"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:124:1: negation returns [Clause clause] : ( '!' )? term ;
    public final Clause negation() throws RecognitionException {
        Clause clause = null;


        Clause term11 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:125:3: ( ( '!' )? term )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:125:7: ( '!' )? term
            {
            boolean flag = false;

            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:126:7: ( '!' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==9) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:126:8: '!'
                    {
                    match(input,9,FOLLOW_9_in_negation510); 

                    flag = true;

                    }
                    break;

            }


            pushFollow(FOLLOW_term_in_negation516);
            term11=term();

            state._fsp--;


            clause = (flag) ? new Not(term11) : term11;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return clause;
    }
    // $ANTLR end "negation"



    // $ANTLR start "and"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:130:1: and returns [Clause clause] :op1= negation ( '&' op2= negation )* ;
    public final Clause and() throws RecognitionException {
        Clause clause = null;


        Clause op1 =null;

        Clause op2 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:131:3: (op1= negation ( '&' op2= negation )* )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:131:7: op1= negation ( '&' op2= negation )*
            {
            boolean flag = false;
                  ArrayList<Clause> operands = new ArrayList<Clause>();

            pushFollow(FOLLOW_negation_in_and557);
            op1=negation();

            state._fsp--;


            operands.add(op1);

            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:133:51: ( '&' op2= negation )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==10) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:133:52: '&' op2= negation
            	    {
            	    match(input,10,FOLLOW_10_in_and562); 

            	    pushFollow(FOLLOW_negation_in_and568);
            	    op2=negation();

            	    state._fsp--;


            	    flag = true; operands.add(op2);

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            clause = (flag) ? new And(operands) : op1;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return clause;
    }
    // $ANTLR end "and"



    // $ANTLR start "truth"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:137:1: truth returns [Clause clause = null] : 'true' ;
    public final Clause truth() throws RecognitionException {
        Clause clause =  null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:138:3: ( 'true' )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:138:7: 'true'
            {
            match(input,53,FOLLOW_53_in_truth601); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return clause;
    }
    // $ANTLR end "truth"



    // $ANTLR start "reactiveRule"
    // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:146:1: reactiveRule returns [ReactiveRule rule] : (conditions= and |conditions= truth ) '->' simpleSentence '.' ;
    public final ReactiveRule reactiveRule() throws RecognitionException {
        ReactiveRule rule = null;


        Clause conditions =null;

        SimpleSentence simpleSentence12 =null;


        try {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:147:3: ( (conditions= and |conditions= truth ) '->' simpleSentence '.' )
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:147:7: (conditions= and |conditions= truth ) '->' simpleSentence '.'
            {
            // C:\\Users\\Albex\\GitHub\\LPS\\src\\controller\\syntax\\JLPSSyntax.g:147:7: (conditions= and |conditions= truth )
            int alt7=2;
            int LA7_0 = input.LA(1);
